// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Page Should renders Home page component with VideosList 1`] = `
<div>
  <section
    class="sc-bdnxRM hyfyNv"
  >
    ...loading
  </section>
</div>
`;

exports[`Home Page Should renders Home page component with VideosList 2`] = `
<div>
  <section
    class="sc-bdnxRM hyfyNv"
  >
    <div
      data-testid="videos-list"
    >
      <p>
        Dummy Videos List component
      </p>
    </div>
  </section>
</div>
`;

exports[`Home Page Should renders an Error message 1`] = `
<div>
  <section
    class="sc-bdnxRM hyfyNv"
  >
    ...loading
  </section>
</div>
`;

exports[`Home Page Should renders an Error message 2`] = `
<div>
  <section
    class="sc-bdnxRM hyfyNv"
  >
    Something was wrong
  </section>
</div>
`;
